--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -20,7 +20,7 @@
             android:id="@+id/ivBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/arrow"
+            android:src="@drawable/ic_arrow"
             android:rotation="180"/>
 
         <TextView
@@ -79,7 +79,7 @@
             app:boxStrokeColor="@color/secondary"
             app:boxStrokeWidth="2dp"
             app:endIconMode="clear_text"
-            app:startIconDrawable="@drawable/user"
+            app:startIconDrawable="@drawable/ic_user"
             app:layout_constraintTop_toBottomOf="@id/btnChangeImage"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -101,7 +101,7 @@
             app:boxStrokeColor="@color/secondary"
             app:boxStrokeWidth="2dp"
             app:endIconMode="clear_text"
-            app:startIconDrawable="@drawable/email"
+            app:startIconDrawable="@drawable/ic_email"
             app:layout_constraintTop_toBottomOf="@id/tfNama"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -123,7 +123,7 @@
             app:boxStrokeColor="@color/secondary"
             app:boxStrokeWidth="2dp"
             app:endIconMode="clear_text"
-            app:startIconDrawable="@drawable/location"
+            app:startIconDrawable="@drawable/ic_location"
             app:layout_constraintTop_toBottomOf="@id/tfEmail"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -145,7 +145,7 @@
             android:layout_marginEnd="8dp"
             android:hint="Kota"
             app:boxStrokeColor="@color/secondary"
-            app:startIconDrawable="@drawable/city"
+            app:startIconDrawable="@drawable/ic_city"
             app:endIconMode="clear_text"
             app:layout_constraintTop_toBottomOf="@id/tfAlamat"
             app:layout_constraintStart_toStartOf="parent"
@@ -167,7 +167,7 @@
             android:layout_marginStart="8dp"
             android:hint="Telpon"
             app:boxStrokeColor="@color/secondary"
-            app:startIconDrawable="@drawable/call"
+            app:startIconDrawable="@drawable/ic_call"
             app:endIconMode="clear_text"
             app:layout_constraintTop_toBottomOf="@id/tfAlamat"
             app:layout_constraintStart_toEndOf="@id/tfKota"
@@ -189,7 +189,7 @@
             android:layout_marginEnd="8dp"
             android:hint="Kode Pos"
             app:boxStrokeColor="@color/secondary"
-            app:startIconDrawable="@drawable/postalcode"
+            app:startIconDrawable="@drawable/ic_postalcode"
             app:endIconMode="clear_text"
             app:layout_constraintTop_toBottomOf="@id/tfKota"
             app:layout_constraintStart_toStartOf="parent"
@@ -211,7 +211,7 @@
             android:layout_marginStart="8dp"
             android:hint="Provinsi"
             app:boxStrokeColor="@color/secondary"
-            app:startIconDrawable="@drawable/province"
+            app:startIconDrawable="@drawable/ic_province"
             app:endIconMode="clear_text"
             app:layout_constraintTop_toBottomOf="@id/tfTelp"
             app:layout_constraintStart_toEndOf="@id/tfKodepos"
@@ -233,7 +233,7 @@
             android:textSize="20sp"
             android:layout_marginTop="24dp"
             android:backgroundTint="@color/primary"
-            app:icon="@drawable/baseline_login_24"
+            app:icon="@drawable/ic_login"
             app:iconGravity="textStart"
             app:layout_constraintTop_toBottomOf="@id/tfProvinsi"
             app:layout_constraintStart_toStartOf="parent"
