--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -58,7 +58,7 @@
             app:hintTextColor="@color/black"
             app:boxStrokeColor="@color/primary_dark"
             app:boxStrokeWidth="2dp"
-            app:startIconDrawable="@drawable/user"
+            app:startIconDrawable="@drawable/ic_user"
             app:endIconMode="clear_text"
             app:boxCornerRadiusTopStart="12dp"
             app:boxCornerRadiusTopEnd="12dp"
@@ -86,7 +86,7 @@
             app:hintTextColor="@color/black"
             app:boxStrokeColor="@color/primary_dark"
             app:boxStrokeWidth="2dp"
-            app:startIconDrawable="@drawable/lock"
+            app:startIconDrawable="@drawable/ic_lock"
             app:endIconMode="password_toggle"
             app:boxCornerRadiusTopStart="12dp"
             app:boxCornerRadiusTopEnd="12dp"
@@ -123,7 +123,7 @@
             android:textStyle="bold"
             app:backgroundTint="@color/primary"
             app:cornerRadius="16dp"
-            app:icon="@drawable/baseline_login_24" />
+            app:icon="@drawable/ic_login" />
 
         <TextView
             android:id="@+id/tv_register"
