--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -68,7 +68,7 @@
                 app:hintTextColor="@color/black"
                 app:boxStrokeColor="@color/primary_dark"
                 app:boxStrokeWidth="2dp"
-                app:startIconDrawable="@drawable/user"
+                app:startIconDrawable="@drawable/ic_user"
                 app:endIconMode="clear_text"
                 app:boxCornerRadiusTopStart="12dp"
                 app:boxCornerRadiusTopEnd="12dp"
@@ -96,7 +96,7 @@
                 app:hintTextColor="@color/black"
                 app:boxStrokeColor="@color/primary_dark"
                 app:boxStrokeWidth="2dp"
-                app:startIconDrawable="@drawable/user"
+                app:startIconDrawable="@drawable/ic_user"
                 app:endIconMode="clear_text"
                 app:boxCornerRadiusTopStart="12dp"
                 app:boxCornerRadiusTopEnd="12dp"
@@ -124,7 +124,7 @@
                 app:hintTextColor="@color/black"
                 app:boxStrokeColor="@color/primary_dark"
                 app:boxStrokeWidth="2dp"
-                app:startIconDrawable="@drawable/email"
+                app:startIconDrawable="@drawable/ic_email"
                 app:endIconMode="clear_text"
                 app:boxCornerRadiusTopStart="12dp"
                 app:boxCornerRadiusTopEnd="12dp"
@@ -152,7 +152,7 @@
                 app:hintTextColor="@color/black"
                 app:boxStrokeColor="@color/primary_dark"
                 app:boxStrokeWidth="2dp"
-                app:startIconDrawable="@drawable/lock"
+                app:startIconDrawable="@drawable/ic_lock"
                 app:endIconMode="password_toggle"
                 app:boxCornerRadiusTopStart="12dp"
                 app:boxCornerRadiusTopEnd="12dp"
@@ -177,7 +177,7 @@
                 app:hintTextColor="@color/black"
                 app:boxStrokeColor="@color/primary_dark"
                 app:boxStrokeWidth="2dp"
-                app:startIconDrawable="@drawable/lock"
+                app:startIconDrawable="@drawable/ic_lock"
                 app:endIconMode="password_toggle"
                 app:boxCornerRadiusTopStart="12dp"
                 app:boxCornerRadiusTopEnd="12dp"
@@ -205,8 +205,8 @@
                 android:textColor="#FFFFFF"
                 android:textStyle="bold"
                 app:cornerRadius="16dp"
-                app:icon="@drawable/baseline_login_24"
-                app:startIconDrawable="@drawable/user" />
+                app:icon="@drawable/ic_login"
+                app:startIconDrawable="@drawable/ic_user" />
 
             <TextView
                 android:id="@+id/tv_kembali"
