--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.cart.CartFragment"
+    android:background="@color/white"
     android:paddingBottom="70dp">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -24,7 +25,7 @@
         android:id="@+id/tvTotalHarga"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:text="Rp 0"
         android:textSize="18sp"
