--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -72,7 +72,7 @@
                     <ImageView
                         android:layout_width="24dp"
                         android:layout_height="24dp"
-                        android:src="@drawable/edit"
+                        android:src="@drawable/ic_edit"
                         android:contentDescription="edit_profile"
                         app:tint="?attr/colorPrimary" />
 
@@ -88,7 +88,7 @@
                     <ImageView
                         android:layout_width="24dp"
                         android:layout_height="24dp"
-                        android:src="@drawable/arrow"
+                        android:src="@drawable/ic_arrow"
                         app:tint="@color/text_secondary" />
                 </LinearLayout>
             </com.google.android.material.card.MaterialCardView>
@@ -107,7 +107,7 @@
                     <ImageView
                         android:layout_width="24dp"
                         android:layout_height="24dp"
-                        android:src="@drawable/location"
+                        android:src="@drawable/ic_location"
                         android:contentDescription="shipping_address"
                         app:tint="?attr/colorPrimary" />
 
@@ -123,7 +123,7 @@
                     <ImageView
                         android:layout_width="24dp"
                         android:layout_height="24dp"
-                        android:src="@drawable/arrow"
+                        android:src="@drawable/ic_arrow"
                         app:tint="@color/text_secondary"/>
                 </LinearLayout>
             </com.google.android.material.card.MaterialCardView>
@@ -142,8 +142,8 @@
                     <ImageView
                         android:layout_width="24dp"
                         android:layout_height="24dp"
-                        android:src="@drawable/history"
-                        android:tint="?attr/colorPrimary"
+                        android:src="@drawable/ic_history"
+                        android:tint="@color/primary"
                         android:contentDescription="order_history"/>
 
                     <TextView
@@ -158,7 +158,7 @@
                     <ImageView
                         android:layout_width="24dp"
                         android:layout_height="24dp"
-                        android:src="@drawable/arrow"
+                        android:src="@drawable/ic_arrow"
                         app:tint="@color/text_secondary"/>
                 </LinearLayout>
             </com.google.android.material.card.MaterialCardView>
@@ -177,7 +177,7 @@
                     <ImageView
                         android:layout_width="24dp"
                         android:layout_height="24dp"
-                        android:src="@drawable/about"
+                        android:src="@drawable/ic_about"
                         app:tint="?attr/colorPrimary"
                         android:contentDescription="about"/>
 
@@ -193,7 +193,7 @@
                     <ImageView
                         android:layout_width="24dp"
                         android:layout_height="24dp"
-                        android:src="@drawable/arrow"
+                        android:src="@drawable/ic_arrow"
                         app:tint="@color/text_secondary"/>
                 </LinearLayout>
             </com.google.android.material.card.MaterialCardView>
@@ -233,27 +233,27 @@
                         <ImageButton
                             android:id="@+id/instagram"
                             style="@style/SocialButtonStyle"
-                            android:src="@drawable/instagram"
+                            android:src="@drawable/ic_instagram"
                             android:contentDescription="instagram"/>
 
                         <ImageButton
                             android:id="@+id/whatsapp"
                             style="@style/SocialButtonStyle"
-                            android:src="@drawable/whatsapp"
+                            android:src="@drawable/ic_whatsapp"
                             android:contentDescription="whatsapp"
                             android:layout_marginStart="24dp"/>
 
                         <ImageButton
                             android:id="@+id/tiktok"
                             style="@style/SocialButtonStyle"
-                            android:src="@drawable/tiktok"
+                            android:src="@drawable/ic_tiktok"
                             android:contentDescription="facebook"
                             android:layout_marginStart="24dp"/>
 
                         <ImageButton
                             android:id="@+id/website"
                             style="@style/SocialButtonStyle"
-                            android:src="@drawable/website"
+                            android:src="@drawable/ic_website"
                             android:contentDescription="website"
                             android:layout_marginStart="24dp"/>
 
@@ -274,7 +274,7 @@
             android:textSize="16sp"
             android:textStyle="bold"
             android:textColor="@color/error"
-            app:icon="@drawable/baseline_logout_24"
+            app:icon="@drawable/ic_logout"
             app:iconTint="@color/error"
             app:strokeColor="@color/error"/>
     </LinearLayout>
