--- a/app/src/main/res/layout/dialog_product_detail.xml
+++ b/app/src/main/res/layout/dialog_product_detail.xml
@@ -34,8 +34,23 @@
                 android:layout_width="112dp"
                 android:layout_height="97dp"
                 android:layout_gravity="center"
-                android:src="@drawable/soldout"
+                android:src="@drawable/ic_soldout"
                 android:visibility="visible" />
+
+            <TextView
+                android:id="@+id/textViewDiscountBadge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top|end"
+                android:layout_margin="10dp"
+                android:background="@drawable/discount_badge_background"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:text="5%"
+                android:visibility="visible"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
         </FrameLayout>
 
@@ -106,7 +121,7 @@
             android:background="@android:color/transparent"
             android:padding="8dp"
             android:scaleType="centerInside"
-            android:src="@drawable/cart"
+            android:src="@drawable/ic_cart"
             tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
         <com.google.android.material.button.MaterialButton
