--- a/app/src/main/res/layout/list_product.xml
+++ b/app/src/main/res/layout/list_product.xml
@@ -2,6 +2,7 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardCornerRadius="8dp"
@@ -34,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:visibility="visible"
-                android:src="@drawable/soldout" />
+                android:src="@drawable/ic_soldout" />
 
             <TextView
                 android:id="@+id/textViewDiscountBadge"
@@ -43,11 +44,12 @@
                 android:layout_gravity="top|end"
                 android:layout_margin="8dp"
                 android:background="@drawable/discount_badge_background"
-                android:padding="4dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
                 android:text="5%"
-                android:visibility="gone"
+                android:visibility="visible"
                 android:textColor="@color/white"
-                android:textSize="12sp"
+                android:textSize="14sp"
                 android:textStyle="bold" />
 
         </FrameLayout>
@@ -70,16 +72,17 @@
             app:layout_constraintTop_toBottomOf="@id/frameLayoutProduct" />
 
         <LinearLayout
+            android:id="@+id/layoutPrice"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
-            android:paddingBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/addToCart"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textViewMerk">
+            app:layout_constraintTop_toBottomOf="@+id/textViewMerk">
 
             <TextView
                 android:id="@+id/textViewHargaJual"
@@ -88,21 +91,34 @@
                 android:text="Rp. 4.000.000"
                 android:textAlignment="center"
                 android:textColor="@color/primary"
-                android:textStyle="bold"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textViewHargaJualDiskon"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="visible"
                 android:text="Rp. 3.200.000"
                 android:textAlignment="center"
                 android:textColor="@color/primary"
                 android:textSize="18sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:visibility="visible" />
 
         </LinearLayout>
+
+        <ImageButton
+            android:id="@+id/addToCart"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/primary"
+            android:padding="8dp"
+            android:src="@drawable/ic_cart"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:tint="@color/secondary"
+            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
