--- a/app/src/main/res/layout/list_product.xml
+++ b/app/src/main/res/layout/list_product.xml
@@ -79,7 +79,7 @@
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
             android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/addToCart"
+            app:layout_constraintBottom_toTopOf="@+id/txView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewMerk">
@@ -106,6 +106,19 @@
                 android:visibility="visible" />
 
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/txView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="view : "
+            android:textAlignment="center"
+            app:layout_constraintBottom_toTopOf="@+id/addToCart"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/layoutPrice"
+            tools:ignore="MissingConstraints" />
 
         <ImageButton
             android:id="@+id/addToCart"
