--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".ui.home.HomeFragment"
     android:background="@color/white"
     android:isScrollContainer="true">
@@ -25,85 +25,320 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="SpeakableTextPresentCheck" />
 
-    <FrameLayout
-        android:id="@+id/homeContainer"
+    <ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        android:background="@color/white"
+        android:layout_marginBottom="60dp">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/homeContent"
+        <FrameLayout
+            android:id="@+id/homeContainer"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/header"
+                android:id="@+id/homeContent"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                tools:ignore="MissingConstraints">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-                <androidx.appcompat.widget.Toolbar
-                    android:id="@+id/toolbar"
+                <!--Header-->
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/header"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/toolbar_background"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:layout_editor_absoluteX="0dp">
+                    android:orientation="vertical"
+                    tools:ignore="MissingConstraints">
 
-                    <TextView
+                    <androidx.appcompat.widget.Toolbar
+                        android:id="@+id/toolbar"
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
+                        android:background="@drawable/rounded_background_down"
+                        android:backgroundTint="@color/toolbar_background"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:layout_editor_absoluteX="0dp">
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="8dp"
+                            android:layout_gravity="start"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="start"
+                                android:text="Selamat Datang,"
+                                android:textColor="@color/white"
+                                android:textSize="16dp" />
+
+                            <TextView
+                                android:id="@+id/userName"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="start"
+                                android:layout_marginTop="8dp"
+                                android:text="Umar Maulana"
+                                android:textColor="@color/white"
+                                android:textSize="20dp"
+                                android:textStyle="bold"/>
+                        </LinearLayout>
+
+                        <ImageButton
+                            android:id="@+id/imgProfile"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:layout_gravity="end"
+                            android:layout_marginEnd="16dp"
+                            android:background="@android:color/transparent"
+                            android:src="@drawable/ic_user"
+                            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
+
+                        <ImageButton
+                            android:id="@+id/imgNotification"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:layout_gravity="end"
+                            android:layout_marginEnd="8dp"
+                            android:background="@android:color/transparent"
+                            android:src="@drawable/ic_notifications"
+                            app:tint="@color/white"
+                            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
+
+                    </androidx.appcompat.widget.Toolbar>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <!--Search-->
+                <LinearLayout
+                    android:id="@+id/searchContainer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="15dp"
+                    android:layout_marginTop="20dp"
+                    android:orientation="horizontal"
+                    android:backgroundTint="@color/white"
+                    app:layout_constraintTop_toBottomOf="@id/header">
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/searchCard"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:cardCornerRadius="12dp"
+                        android:layout_margin="4dp"
+                        android:background="@color/primary"
+                        app:cardElevation="4dp">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal">
+
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="10dp"
+                                android:backgroundTint="@android:color/transparent"
+                                android:src="@drawable/ic_search"/>
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_margin="10dp"
+                                android:textSize="16sp"
+                                android:layout_height="wrap_content"
+                                android:text="Search products..." />
+
+                        </LinearLayout>
+
+                    </androidx.cardview.widget.CardView>
+
+
+                </LinearLayout>
+
+                <!--Slider-->
+                <LinearLayout
+                    android:id="@+id/imageSliderContainer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="16dp"
+                    android:orientation="vertical"
+                    app:layout_constraintTop_toBottomOf="@id/searchContainer"
+                    tools:ignore="MissingConstraints">
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="wrap_content"
+                        android:layout_height="200dp"
+                        app:cardCornerRadius="16dp"
+                        app:cardElevation="0dp">
+
+                        <com.denzcoskun.imageslider.ImageSlider
+                            android:id="@+id/image_slider"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:scrollIndicators="none"
+                            app:iss_auto_cycle="true"
+                            app:iss_corner_radius="28"
+                            app:iss_delay="1000"
+                            app:iss_period="1000"
+                            app:iss_title_background="@color/white" />
+                    </androidx.cardview.widget.CardView>
+
+                </LinearLayout>
+
+                <!--Categories-->
+                <HorizontalScrollView
+                    android:id="@+id/categoriesContainer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:scrollbars="none"
+                    android:layout_margin="16dp"
+                    app:layout_constraintTop_toBottomOf="@id/imageSliderContainer"
+                    tools:ignore="MissingConstraints,UnknownId">
+
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="start"
-                        android:layout_marginStart="16dp"
-                        android:text="@string/app_name"
-                        android:textColor="@color/white"
-                        android:textSize="20dp"
-                        android:textStyle="bold"/>
+                        android:scrollbarAlwaysDrawHorizontalTrack="true"
+                        android:orientation="horizontal">
 
-                    <ImageButton
-                        android:id="@+id/searchIcon"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:layout_gravity="end"
-                        android:layout_marginEnd="16dp"
-                        android:background="@android:color/transparent"
-                        android:src="@drawable/ic_search"
-                        app:tint="@color/white"
-                        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/allProducts"
+                            android:layout_width="wrap_content"
+                            android:layout_height="60dp"
+                            android:padding="8dp"
+                            android:text="All"
+                            android:textAlignment="center"
+                            android:textColor="#FFFFFF"
+                            android:textAllCaps="false"
+                            app:backgroundTint="@color/primary"
+                            app:cornerRadius="8dp"
+                            app:icon="@drawable/ic_dashboard"
+                            app:iconSize="30dp"/>
 
-                </androidx.appcompat.widget.Toolbar>
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/keyboardProducts"
+                            android:layout_width="wrap_content"
+                            android:layout_height="60dp"
+                            android:layout_marginStart="16dp"
+                            android:padding="8dp"
+                            android:text="Keyboard"
+                            android:textAlignment="center"
+                            android:textAllCaps="false"
+                            android:textColor="@color/text_primary"
+                            app:backgroundTint="@color/white"
+                            app:cornerRadius="8dp"
+                            app:icon="@drawable/ic_keyboard"
+                            app:iconSize="30dp"
+                            app:iconTint="@null" />
 
-                <com.google.android.material.tabs.TabLayout
-                    android:id="@+id/tabLayout"
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/headsetProducts"
+                            android:layout_width="wrap_content"
+                            android:layout_height="60dp"
+                            android:layout_marginStart="16dp"
+                            android:padding="8dp"
+                            android:text="Headset"
+                            android:textAllCaps="false"
+                            android:textColor="@color/text_primary"
+                            app:backgroundTint="@color/white"
+                            app:cornerRadius="8dp"
+                            app:icon="@drawable/ic_headset"
+                            app:iconSize="30dp"
+                            app:iconTint="@null"/>
+
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/mouseProducts"
+                            android:layout_width="wrap_content"
+                            android:layout_height="60dp"
+                            android:layout_marginStart="16dp"
+                            android:padding="8dp"
+                            android:text="Mouse"
+                            android:textAllCaps="false"
+                            android:textColor="@color/text_primary"
+                            app:backgroundTint="@color/white"
+                            app:cornerRadius="8dp"
+                            app:icon="@drawable/ic_mouse"
+                            app:iconSize="30dp"
+                            app:iconTint="@null"/>
+
+                    </LinearLayout>
+
+                </HorizontalScrollView>
+
+                <!--Popular Products-->
+                <LinearLayout
+                    android:id="@+id/popolarProductsContainer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/white"
+                    android:orientation="vertical"
+                    android:layout_margin="16dp"
+                    android:layout_marginTop="20dp"
+                    app:layout_constraintTop_toBottomOf="@id/categoriesContainer"
+                    tools:ignore="MissingConstraints">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/popularProductsTitle"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="Popular"
+                            android:textColor="@color/text_primary"
+                            android:textSize="20dp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/popularProductsSeeAll"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="end|center_vertical"
+                            android:text="See All"
+                            android:textColor="@color/text_secondary"
+                            android:textSize="14dp"
+                            android:textStyle="bold"
+                            tools:ignore="TextSizeCheck" />
+
+                    </LinearLayout>
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/popularProductsRecyclerView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:overScrollMode="never"/>
+
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/byPowered"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:text="Powered by Umar Maulana"
+                    android:textColor="@color/text_secondary"
+                    android:textSize="12sp"
+                    android:textStyle="italic"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/toolbar"
-                    app:tabIndicatorColor="@color/text_primary"
-                    app:tabSelectedTextColor="@color/text_primary"
-                    app:tabTextColor="@color/text_secondary"
-                    tools:ignore="SpeakableTextPresentCheck" />
+                    app:layout_constraintTop_toBottomOf="@id/popolarProductsContainer"
+                    tools:layout_editor_absoluteX="0dp"
+                    tools:layout_editor_absoluteY="0dp" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <androidx.viewpager.widget.ViewPager
-                android:id="@+id/viewPager"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginBottom="60dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/header"
-                tools:ignore="SpeakableTextPresentCheck" />
+        </FrameLayout>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </FrameLayout>
-
-
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
