--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,14 +4,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/white"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:scrollbars="none">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:layout_marginBottom="50dp"
         android:gravity="center_horizontal">
 
         <!-- Profile Section -->
@@ -143,7 +145,7 @@
                         android:layout_width="24dp"
                         android:layout_height="24dp"
                         android:src="@drawable/ic_history"
-                        android:tint="@color/primary"
+                        app:tint="@color/primary"
                         android:contentDescription="order_history"/>
 
                     <TextView
@@ -258,6 +260,18 @@
                             android:layout_marginStart="24dp"/>
 
                     </LinearLayout>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:textAlignment="center"
+                        android:text="Ruko Mataram Plaza, D8, RW.9, Jagalan, Kec. Semarang Tengah, Kota Semarang, Jawa Tengah 50613"
+                        android:textColor="@color/text_secondary"
+                        android:textSize="12sp"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="8dp"/>
+
                 </LinearLayout>
             </com.google.android.material.card.MaterialCardView>
         </LinearLayout>
@@ -270,6 +284,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:layout_marginHorizontal="32dp"
+            android:layout_marginBottom="50dp"
             android:text="Logout"
             android:textSize="16sp"
             android:textStyle="bold"
