--- a/app/src/main/res/layout/list_product_cart.xml
+++ b/app/src/main/res/layout/list_product_cart.xml
@@ -31,48 +31,47 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_gravity="center"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/tvProduct"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="12dp"
                     android:text="Rexus Keyboard Gaming Mechanical Legionare MX5.2"
                     android:textStyle="bold"
                     android:textColor="@color/text_primary"
                     android:textSize="16sp"
                     android:maxLength="50"/>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/tvPrice"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="12dp"
+                    android:text="Rp 4.000.000"
+                    android:textStyle="bold"
+                    android:textColor="@color/primary"
+                    android:textSize="16sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-                    <TextView
-                        android:id="@+id/tvPrice"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="12dp"
-                        android:text="Rp 4.000.000"
-                        android:textStyle="bold"
-                        android:textColor="@color/primary"
-                        android:textSize="16sp" />
-
-                    <TextView
-                        android:id="@+id/tvHargaDiskon"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="18sp"
-                        android:text="Rp. 80.000"
-                        android:textStyle="bold"
-                        android:textColor="@color/text_primary"
-                        android:layout_marginStart="8dp"
-                        android:layout_marginTop="12dp"
-                        android:visibility="visible" />
-
-                </LinearLayout>
+                <TextView
+                    android:id="@+id/tvHargaDiskon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:text="Rp. 80.000"
+                    android:textColor="@color/text_primary"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    app:layout_constraintHorizontal_chainStyle="packed"
+                    app:layout_constraintStart_toEndOf="@id/tvPrice"
+                    app:layout_constraintTop_toTopOf="@id/tvPrice"
+                    app:layout_constraintWidth_default="wrap"
+                    tools:ignore="MissingConstraints" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
