--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,27 +11,16 @@
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:src="@raw/logo"
         android:layout_gravity="center"
         android:layout_marginTop="50dp"/>
 
-    <TextView
-        android:id="@+id/tv_app_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="16dp"
-        android:text="@string/app_name"
-        android:textColor="#C5C5C5"
-        android:textSize="24sp"
-        android:textStyle="bold" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="30dp"
         android:background="@drawable/rounded_background_up"
         android:focusable="true"
         android:focusableInTouchMode="true"
@@ -108,7 +97,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:layout_marginTop="8dp"
-            android:text="Lupa Kata Sandi"
+            android:text="Forgot Password?"
             android:textColor="#0D47A1" />
 
         <com.google.android.material.button.MaterialButton
@@ -125,14 +114,56 @@
             app:cornerRadius="16dp"
             app:icon="@drawable/ic_login" />
 
-        <TextView
-            android:id="@+id/tv_register"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:layout_marginTop="8dp"
-            android:text="Tidak Punya Akun? daftar."
-            android:textColor="#0D47A1" />
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Don't have an account?"
+                android:textColor="#000000" />
+
+            <TextView
+                android:id="@+id/tv_register"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="5dp"
+                android:text="Register."
+                android:textColor="#0D47A1" />
+
+        </LinearLayout>
+
+        <!-- Login As Guset-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Login as Guest?"
+                android:textColor="#000000" />
+
+            <TextView
+                android:id="@+id/tv_guest_login"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="5dp"
+                android:text="Login."
+                android:textColor="#0D47A1" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
